# lale

./: .gitignore  README.md  package.json  pnpm-lock.yaml  test_matchall_async.js  test_regex.js  test_regex2.js  test_regex_nest.js  test_repro.ts  test_space.js  test_space2.js  tsconfig.base.json
.claude/: CLAUDE.md  settings.json
.claude/agents/: cache-keys.md  extension-mv3.md  lean-pool.md  lean-translator.md  protocol-sync.md
.claude/skills/lale-cache-audit/: SKILL.md
.claude/skills/lale-protocol-check/: SKILL.md
.claude/skills/lale-run/: SKILL.md
.claude/skills/lale-translate-debug/: SKILL.md
services/backend/: .env.example  cache 2.db-shm  cache 2.db-wal  pyproject.toml  test_api.py  test_dep.py
services/backend/lale_backend/: __init__.py  api.py  cache.py  config.py  dependency_extractor.py  lean_server.py  normalize.py  orchestrator.py  protocol.py  retrieval.py  semantic_review.py  translator.py  trust.py  worthiness.py
services/backend/scripts/: seed.sh
services/backend/tests/: test_lean_source.py  test_orchestrator_retry.py  test_retrieval.py  test_trust_and_review.py  test_worthiness.py
services/lean/: Lale.lean  README.md  lake-manifest.json  lakefile.toml
services/lean/Lale/: Warmup.lean
