[project]
name = "lale-backend"
version = "0.0.1"
description = "lale backend: FastAPI + Lean 4 process pool + Anthropic translator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "anthropic>=0.40",
  "sse-starlette>=2.1",
  "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "pytest>=8",
  "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lale_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
